@@ -9,6 +9,8 @@ Upcoming
 - Escape user input in error messages to prevent potention server-side cross-site scripting
 - 'status' field in error objects is now a string, as required by JSON API standard
   https://jsonapi.org/format/#error-objects
+- Returns '400' status if page number is provided but page size is 0
+- Returns '400' status if unknown field was used for sorting
 
 
 Version 2.2.5
